--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <div align="center">
-    <h1>Congratulations-ZIYOTEK 2022 DevOps Class</h1>
+    <h1>Congratulations-ZIYOTEK DevOps Class</h1>
     <h2>This application was deployed using AWS CodeDeploy.</h2>
     <h3>Next Step is starting a new career.</h3>
     <h1>Dont accept 5 digit offers!!!!</h1>
